--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,9 @@
 	border-radius: 10px;
 	_font-size: 16px;
 }
+#J_sql {
+	display: none;
+}
 </style>
 </head>
 <body>
@@ -31,7 +34,9 @@
 <div class="container" style="margin-bottom: 50px;">
 	<div class="row"><!-- row1 -->
 		<div class="col-xs-offset-1 col-xs-10">
-			<h3 style="text-align: center; font-family: 'Microsoft Yahei'"><strong>请输入查询SQL</strong></h3>
+			<div class="text-center">
+				<h3 style="font-family: 'Microsoft Yahei'"><strong>请输入查询SQL</strong></h3>
+			</div>
 			<div style="border: 2px solid #ccc; border-radius: 10px; height: 430px;" >
 				<textarea id="J_sql"></textarea>
 			</div>
