--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>HIVE-QL格式化工具</title>
+<title>HiveQL格式化工具</title>
 <link rel="stylesheet" href="/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="/css/style.css"/>
 <link rel="stylesheet" href="/css/codemirror.css" >
@@ -24,7 +24,7 @@
 		<div class="collapse navbar-collapse">
 			<div class="col-xs-offset-2 col-xs-8">
 				<ul class="nav navbar-left text-center" style="margin-top:6px; width: 100%;">
-					<li class="title"><strong>HIVE-QL格式化工具</strong></li>
+					<li class="title"><strong>HiveQL格式化工具</strong></li>
 				</ul>
 			</div>
 		</div>
