页面自适应调整与问题修复

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,16 @@
 <link rel="stylesheet" href="css/simplescrollbars.css" >
 <link rel="shortcut icon" href="img/favicon.ico"/>
 <style>
+@media (min-width:1400px){
+	.container {
+		width:1320px;
+	}
+}
+@media (min-width:1700px){
+	.container {
+		width:1600px;
+	}
+}
 .CodeMirror {
 	height: 425px;
 	border-radius: 5px;
