--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,16 +24,19 @@
 	border-radius: 5px;
 }
 .cm-s-default .cm-keyword {
-	color: rgb(17,50,133);
+	color: #113285;
 }
 .cm-s-default .cm-variable {
 	color: #333;
 }
 .cm-s-default .cm-comment {
-	color: rgb(27,129,62);
+	color: #1b813e;
 }
 .cm-matchhighlight {
-	background-color: rgb(203, 240, 255)
+	background-color: #cbf0ff;
+}
+.CodeMirror-selection-highlight-scrollbar {
+	background-color: #0090cc;
 }
 div.CodeMirror span.CodeMirror-matchingbracket{
 	font-weight: bold;
@@ -80,6 +83,7 @@ div.CodeMirror span.CodeMirror-matchingbracket{
 
 <script src="js/sea-modules/sea.js"></script>
 <script type="text/javascript" src="js/codemirror/codemirror.js"></script>
+<script type="text/javascript" src="js/codemirror/searchcursor.js"></script>
 <script type="text/javascript" src="js/codemirror/annotatescrollbar.js"></script>
 <script type="text/javascript" src="js/codemirror/matchesonscrollbar.js"></script>
 <script type="text/javascript" src="js/codemirror/simplescrollbars.js"></script>
