添加日期占位符中表达式的处理

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -99,7 +99,8 @@ seajs.config({
 	alias: {
 		'jquery': 'jquery/jquery.js',
 		'bootstrap': 'bootstrap/bootstrap.min.js',
-		'underscore': 'underscore/underscore.js'
+		'underscore': 'underscore/underscore.js',
+		'moment': 'moment/moment.js'
 	}
 });
 seajs.use('app/index', function(index) {
