--- a/src/main/resources/static/zhuji_helper.html
+++ b/src/main/resources/static/zhuji_helper.html
@@ -108,10 +108,9 @@ span.cm-cm-overlay.cm-matchhighlight {
 				</div>
 				<div class="col-xs-6">
 					<button id="J_genPaloInfoBtn" class="btn btn-primary">生成palo任务信息</button>
-					<button id="J_copyTaskName" class="btn btn-info">复制任务名</button>
-					<button id="J_copyTaskCmd" class="btn btn-info">复制任务命令</button>
 					<pre id="J_paloTaskName" style="height: 40px; margin-top: 10px;"></pre>
-					<pre id="J_paloTaskCmd" style="height: 180px; margin-top: 10px; word-wrap: break-word; white-space: pre-wrap;"></pre>
+					<pre id="J_paloTaskCmd" style="height: 140px; margin-top: 10px; word-wrap: break-word; white-space: pre-wrap;"></pre>
+					<pre id="J_paloTableSql" style="height: 215px; margin-top: 10px;"></pre>
 				</div>				
 			</div>
 		</div>
