--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -108,6 +108,7 @@ span.cm-cm-overlay.cm-matchhighlight {
 	border: 1px solid #ccc;
 	padding: 0px;
 	background-color: #fff;
+	z-index: 100;
 }
 #J_full_screen_btn {
 	font-size: 20px;
@@ -199,7 +200,10 @@ span.cm-cm-overlay.cm-matchhighlight {
 						<div class="form-group">
 							<label class="col-sm-2 control-label"><nobr>表名：</nobr></label>
 							<div class="col-sm-10">
-								<input id="J_table_name" class="form-control input-sm" placeholder="请输入要查询的表名"/>
+								<div class="input-group">
+									<input id="J_table_name" class="form-control input-sm" placeholder="请输入要查询的表名"/>
+									<div id="J_table_count" class="input-group-addon"></div>
+								</div>
 							</div>
 						</div>
 						<div class="form-group">
