--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -255,17 +255,17 @@ span.cm-cm-overlay.cm-matchhighlight {
 						</div>
 					</div>
 					<div class="col-xs-6 form-horizontal">
-						<label class="col-sm-3 control-label"><nobr>url：</nobr></label>
+						<label class="col-sm-3 control-label"><nobr>类名：</nobr></label>
 						<div class="col-sm-9">
-							<input id="J_request_url" class="form-control input-sm" placeholder="请输入要查询的url"/>
+							<input id="J_class_name" class="form-control input-sm" placeholder="请输入要查询的类名"/>
 						</div>
 					</div>
 				</div>
 				<div class="row" style="margin-top: 10px;">
 					<div class="col-xs-6 form-horizontal">
-						<label class="col-sm-3 control-label"><nobr>类名：</nobr></label>
+						<label class="col-sm-3 control-label"><nobr>url：</nobr></label>
 						<div class="col-sm-9">
-							<input id="J_class_name" class="form-control input-sm" placeholder="请输入要查询的类名"/>
+							<input id="J_request_url" class="form-control input-sm" placeholder="请输入要查询的url"/>
 						</div>
 					</div>
 					<div class="col-xs-6 form-horizontal">
@@ -276,8 +276,8 @@ span.cm-cm-overlay.cm-matchhighlight {
 					</div>
 				</div>
 				<hr style="margin: 10px 0px; border-top: 1px solid #ccc"/>
-				<div id="J_request_mapping_tbl_wrapper">
-					<table class="table table-condensed table-bordered table-hover">
+				<div id="J_request_mapping_tbl_wrapper" style="overflow-x: auto;">
+					<table class="table table-condensed table-bordered table-hover" style="margin-bottom: 0px;">
 						<thead>
 							<tr>
 								<th style="min-width: 130px;">项目名</th>
