添加计数的badge

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -137,6 +137,9 @@ span.cm-cm-overlay.cm-matchhighlight {
 	max-width: 300px;
 	min-width: 100px;
 }
+.badge.badge-info {
+	background-color: #2f82f5;
+}
 </style>
 </head>
 <body>
@@ -159,7 +162,7 @@ span.cm-cm-overlay.cm-matchhighlight {
 				<li class="active"><a id="J_prettify_tab">格式化HQL</a></li>
 				<li class="cursor-pointer"><a id="J_palo_tab">生成palo信息</a></li>
 				<li class="cursor-pointer"><a id="J_table_info_tab">查看表依赖</a></li>
-				<li class="cursor-pointer"><a id="J_request_mapping_tab">查看url路由</a></li>
+				<li class="cursor-pointer"><a id="J_request_mapping_tab">查看url路由&nbsp;<span class="badge badge-info"></span></a></li>
 			</ul>
 			<div id="J_prettify_wrapper">
 				<div style="border: 1px solid #ccc; height: 430px;" >
